[package]
name = "tomlq-rs"
version = "0.1.0"
edition = "2021"
authors = ["endruz <endruz@foxmail.com>"]
description = "A command-line TOML processing tool."
repository = "https://github.com/endruz/tomlq-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features = ["cargo"]}
toml = "0.5.9"
